<?xml version="1.0"?>
<!--
  Copyright (c) 2022 Ulsan National Institute of Science and Technology (UNIST)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<package>
  <name>behavior_planner_prev</name>
  <version>0.1.0</version>
  <description>Load Lanelet2 map from osm file</description>

  <maintainer email="nyi0944@unist.ac.kr">Youngim Nam</maintainer>

  <author email="nyi0944@unist.ac.kr">Youngim Nam</author>

  <license>BSD</license>

  <author>Youngim Nam</author>

  <buildtool_depend>catkin</buildtool_depend>

 
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hmcl_msgs</build_depend>  
  <build_depend>v2x_msgs</build_depend>  
  <build_depend>nav_msgs</build_depend>
  <build_depend>cmake_modules</build_depend> 
  <build_depend>autoware_msgs</build_depend> 


  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hmcl_msgs</run_depend>
  <run_depend>v2x_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>autoware_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  

</package>
