<?xml version="1.0"?>
<package format="2">
  <name>hmcl_v2x</name>
  <version>1.0.0</version>
  <description>The v2x package</description>

  <maintainer email="kjs1145@unist.ac.kr">junsung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>hmcl_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  <build_depend>v2x_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>hmcl_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <exec_depend>v2x_msgs</exec_depend>

</package>
